# braiinspool-matrix-bot

./: Cargo.toml  Makefile  README.md
doc/: braiinspool-matrix-bot.service  build-unix.md  build.md  config-example.toml  configuration.md
src/: db.rs  main.rs  util.rs
src/bot/: mod.rs
src/config/: mod.rs  model.rs
