[package]
name = "braiinspool-matrix-bot"
version = "0.1.0"
edition = "2021"
description = "BraiinsPool Matrix Bot"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
license = "MIT"
homepage = "https://github.com/yukibtc/braiinspool-matrix-bot"
repository = "https://github.com/yukibtc/braiinspool-matrix-bot.git"
keywords = ["bitcoin", "braiins", "slushpool", "mining", "matrix"]
readme = "README.md"

[dependencies]
bpns-rocksdb = { git = "https://gitlab.com/p2kishimoto/bpns", rev = "52989b7737b9bd8e242d91f7086ad6340e77ddee" }
chrono = "0.4.19"
clap = { version = "3.0.14", features = ["derive"] }
dirs = "4.0.0"
braiinspool = "0.1.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev= "35f598a09582d69a7c73de806c63318ca10b7d39", features = ["encryption", "sled-crypto-store", "sled-state-store", "socks"] }
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
toml = "0.5.8"
